# Optional

./: .clang-format  CMakeLists.txt  README.md
cmake/: AddGoogleTest.cmake
palkin/: optional.hpp
test/: CMakeLists.txt  optional_test.cpp
